--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "cors": "^2.8.5",
     "pokenode-ts": "^1.16.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
