--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pokenode-ts": "^1.16.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.7.4",
