--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "react-slider-swiper": "^2.0.6",
+    "swiper": "^8.3.2",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
