adding chat web

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chatscope/chat-ui-kit-react": "^1.9.7",
+    "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
@@ -16,20 +18,31 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "colors": "^1.4.0",
+    "concurrently": "^7.3.0",
     "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "moment": "^2.29.4",
     "pokenode-ts": "^1.16.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-scripts": "^5.0.1",
     "react-slider-swiper": "^2.0.6",
+    "redux": "^4.2.0",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
     "swiper": "^8.3.2",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ws": "^8.8.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"npm run start:server\" \"npm run start:client\" \"react-scripts start\"",
+    "start:client": "parcel src/chat/index.html",
+    "start:server": "nodemon src/chat/Server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -76,7 +89,11 @@
     "@storybook/react": "^6.5.10",
     "@storybook/testing-library": "^0.0.13",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "nodemon": "^2.0.19",
+    "parcel": "^2.7.0",
+    "parcel-bundler": "^1.12.5",
     "prop-types": "^15.8.1",
+    "react-socket-io": "^0.2.5",
     "webpack": "^5.74.0"
   }
 }
