--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -4,7 +4,8 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 pool:
-  vmImage: 'ubuntu-16.04'
+  vmImage: ubuntu-latest
+
 trigger:
   - master
 steps:
