--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -9,6 +9,12 @@ pool:
 trigger:
   - master
 steps:
+  - task: CopyFiles@2
+    displayName: 'Copy Files to: $(build.artifactstagingdirectory)/Templates'
+    inputs:
+      SourceFolder: deployment
+      Contents: '*.json'
+      TargetFolder: '$(build.artifactstagingdirectory)/Templates'
   - task: Npm@1
     displayName: 'npm custom'
     inputs:
