--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -12,7 +12,7 @@ steps:
   - task: CopyFiles@2
     displayName: 'Copy Files to: $(build.artifactstagingdirectory)/Templates'
     inputs:
-      SourceFolder: deployment
+      SourceFolder: '$(Build.SourcesDirectory)'
       Contents: '*.json'
       TargetFolder: '$(build.artifactstagingdirectory)/Templates'
   - task: Npm@1
