Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,8 @@ steps:
     versionSpec: '16.x'
   displayName: 'Install Node.js'
 
+  task: PublishBuildArtifacts@1
+  
 - script: |
     npm install
     npm run build
