Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,11 @@ steps:
   displayName: 'Install Node.js'
 
 - task: PublishBuildArtifacts@1
-  
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)' # string. Required. Path to publish. Default: '$(Build.ArtifactStagingDirectory)'.
+    ArtifactName: 'drop' # string. Required. Artifact name. Default: 'drop'.
+    publishLocation: 'Container'
+    
 - script: |
     npm install
     npm run build
